# update-zenodo-action

./: .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  action.yml  pyproject.toml
.github/actions/zenodo-upload/: action.yml  requirements.txt  zenodo_upload.py
.github/workflows/: ci-cd.yml
.github/zenodo-upload/: CITATION.cff  action.yml  requirements.txt  setup.py  zenodo_upload.py
src/: action.yml  main.py  zenodo.py
